--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,7 @@ html {
 
 body {
     min-height: 100dvh;
+    max-height: 100dvh;
 }
 
 ul {
@@ -16,7 +17,6 @@ ul {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    min-height: 100dvh;
 }
 
 a:link {
@@ -30,4 +30,24 @@ a:visited {
 
 a:active {
     color: gray;
+}
+
+#bod {
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
+    max-height: 100dvh;
+    margin: 0px;
+    padding: 0px;
+    justify-content: space-evenly;    
+}
+
+#tracker {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-weight: lighter;
+    font-size: 24px;
 }
