--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+.inter {
+  font-family: "Inter", serif;
+}
+
 html {
     height: 100dvh;
 }
@@ -5,4 +9,20 @@ html {
 body {
     min-height: 100dvh;
     margin: 0px;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+}
+
+a:hover {
+    color: gray;
 }
