--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ body {
     margin: 0px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -61,5 +61,5 @@ img {
 
 p {
     padding: 0px;
-    margin: 0px;
+    margin: 12px 0px;
 }
